# test-prompts

./: README.md  pyproject.toml
src/test_prompts/prompts/: cv_bucket_extraction.txt  cv_prompt.txt  cv_summary.txt  linkedin_prompt.txt
