[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-prompts"
version = "0.1.0"
description = "Shared prompt library for LLM-based CV processing."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Campe Howdy", email = "example@example.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"test_prompts" = ["prompts/*.txt"]
